fix button spacing

--- a/src/pages/GamePage/GamePage.css
+++ b/src/pages/GamePage/GamePage.css
@@ -19,5 +19,9 @@
 .GamePage-nav {
     width: 115px;
 }
+
+.GamePage-button {
+    margin: 10px 10px 0;
+}
   
   
